--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ readme = "README.md"
 edition = "2021"
 
 [dependencies]
-sdl2 = "0.37.0"
+sdl2 = { version = "0.37.0", features = ["ttf"] }
+
+[package.metadata]
+assets = ["assets/*"]
