--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 edition = "2021"
 
 [dependencies]
+rfd = "0.15.1"
 sdl2 = { version = "0.37.0", features = ["ttf"] }
 
 [package.metadata]
