--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 
 [dependencies]
 rfd = "0.15.1"
-sdl2 = { version = "0.37.0", features = ["ttf"] }
+sdl2 = { version = "0.37.0", features = ["image", "ttf"] }
 
 [package.metadata]
 assets = ["assets/*"]
