--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ readme = "README.md"
 edition = "2021"
 
 [dependencies]
-sdl2 = { version = "0.37.0", features = ["ttf"] }
+rfd = "0.15.1"
+sdl2 = { version = "0.37.0", features = ["image", "ttf"] }
 
 [package.metadata]
 assets = ["assets/*"]
